# AIMailPilot

./: .env.example  .replit  DEPLOYMENT.md  QUICKSTART.md  README.md  SUPABASE_SETUP_GUIDE.md  demo.sh  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  sample_qa.json  sample_request.json  sample_user.json  test_api.sh  user_settings.db
app/: main.py
apps-script/: BackendClient.gs  CacheManager.gs  CategoryExpandedCard.gs  ChatCard.gs  ChatbotCardNew.gs  Code.gs  Config.gs  FlaggedMailCard.gs  GmailFetcher.gs  InboxReminderCard.gs  SETUP.md  SettingsCard.gs  SidebarCard.gs  StateManager.gs  TaskScheduleCard.gs  appsscript.json
attached_assets/: Pasted-Error-with-the-add-on-Run-time-error-The-value-returned-from-Apps-Script-has-a-type-that-cannot-be-1759622021357_1759622021358.txt  Pasted-Hi-Replit-Our-summaries-are-low-quality-and-currently-get-hard-truncated-at-15-characters-Ple-1761072084449_1761072084449.txt  Pasted-I-want-to-extend-our-deadline-parsing-so-that-all-end-of-style-phrases-are-normalized-to-real-de-1762845237306_1762845237306.txt  Pasted-I-want-to-optimize-our-deadline-handling-and-the-Task-Schedule-timeline-display-Context-Right-n-1762824956024_1762824956024.txt  Pasted-Layer-1a-Inbox-Reminder-view-default-Header-Greeting-message-total-unread-email-count-Categor-1761033243341_1761033243342.txt  Pasted-Please-update-the-project-to-implement-the-final-technical-plan-for-1-Chatbot-Layer-3-and-2-Ex-1759812012780_1759812012782.txt  (+9 more)
database/: schema.sql
server/: gmail.ts  google-calendar-client.ts  index.ts  oauth.ts  (+2 more)
(+38 files in other folders)
